# DevOps-Course-Starter

./: .dockerignore  .env.template  .travis.yml  Dockerfile  README.md  app.py  config.py  env.list  model.py  pyproject.toml  session_roles.py  test_integration_trello.py  trello_app.py  trello_mongo_db.py
.github/workflows/: master_devops-todo-app-webapp-name.yml
templates/: index.html
tests_e2e/: test_selenium_trello.py
